// vim: tabstop=2 shiftwidth=2 softtabstop=2 smarttab expandtab autoindent

= Tackler: Changelog

== Releases

=== Tackler release XX.YY.Z

==== New features and changes

New features:

* New credit account reporting option `--invert` for all reports
  and Equity export
  (link:https://github.com/tackler-ng/tackler/issues/99[GH-99])

Changed functionality:

* Equity export: Use price data if it's activated
  (link:https://github.com/tackler-ng/tackler/issues/101[GH-101])


==== Fixes

Fixes in this release:

* Fixed CLI *_select all_* account selector (`--accounts ""`)

==== Development

Updated dependencies (major or minor version):

* ...

===== Rust toolchain

Rust Edition:: 2024
MSRV:: 1.85.0

==== Release Artifacts

[cols="1,2",width=50%]
|===
|Component    | Version

|Tackler CLI  | TODO: XX.YY.Z
|tackler-core | TODO: No changes
|tackler-api  | TODO: No changes
|tackler-rs   | TODO: No changes
|===


'''


=== Tackler release 25.05.1

[WARNING]
.Semantic change with `input.git.dir` and `input.git.ext`
====
This releases fixes the functionality of `input.git.dir` and `input.git.ext` so
that it is identical how `input.fs.dir` and `input.fs.ext` work. +
 +
With previous releases of tackler, `input.git.dir` and `input.git.ext` acted as
a glob pattern (prefix and suffix). Now `input.git.dir` will match the full
directory name (no glob at the end)  and `input.git.ext` will match the full
extension of the filename (no prefix glob).
====

==== New features and changes

New features:

* New output format JSON
  ** Optional configuration key `report.formats` to specify output formats.
  ** New optional CLI argument `--formats` to select report formats

Changed functionality:

* Git SCM Storage
  ** Enforce that `input.git.dir` is matched as a directory (not as a glob)
  ** Enforce that `input.git.ext` is matched as a file extension (not as a glob)

* Add account selectors as text into Account Selector Checksum metadata
